firefox alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,8 @@ li{
   text-align: center;
   position: relative;
   border-top: 9px solid #1d2121;
-  margin-top: -250px;
+  margin-top: -248px;
+  height: 496px;
 }
 
 /* LEFT BRAIN AREA */
@@ -56,7 +57,8 @@ li{
   background-color: #3e4e5b;
   color: #f5f5f5;
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 50.3px;
+  height: 487px;
 }
 
 .leftbrain-btn{
@@ -83,6 +85,7 @@ li{
   color: #f5f5f5;
   padding-top: 50px;
   padding-bottom: 55px;
+  height: 487px;
 }
 
 #right-brain h2{
@@ -171,7 +174,7 @@ li{
 }
 
 /* MOBILE STYLES */
-@media(max-width:767px){
+@media(max-width:768px){
   .footer{
     text-align:center;
     height: 135px;
@@ -185,5 +188,23 @@ li{
     top: -40px;
     padding: 0px;
     font-size: 20px;
+  }
+}
+
+@media(max-width:990px){
+  #brain-areas{
+      height: 100%;
+  }
+  footer{
+      margin-top: 180px;
+  }
+}
+
+
+@-moz-document url-prefix() {
+  @media(max-width:990px){
+    footer {
+        margin-top: 134px;
+    }
   }
 }
